fixed the some problems

--- a/index.html
+++ b/index.html
@@ -434,22 +434,19 @@
             and take the first step toward creating something exceptional.</p>
         </div>
 
-        <div class=" grid grid-cols-1 gap-7 w-[90%] md:w-[70%] mx-auto mt-24 ">
+        <div class=" grid grid-cols-1 gap-7 w-[90%] md:w-[70%] mx-auto mt-24">
           <!-- Input Fields -->
-          <div class=" grid grid-cols-1 sm:grid-cols-1 md:grid-cols-2 gap-7">
-            <input class="w-full p-4 outline-none rounded-full" type="text" name="fname" placeholder="First Name*">
-
-            <input class="p-4 w-full outline-none rounded-full" type="text" name="lname" placeholder="Last Name*">
-
-            <input class="p-4 w-full outline-none rounded-full" type="number" name="number" placeholder="Phone Number*">
-
-            <input class="p-4 w-full outline-none rounded-full" type="email" name="email" placeholder="Email*">
+          <div class=" grid grid-cols-1 sm:grid-cols-1 md:grid-cols-2 gap-7  w-full">
+            <input class=" p-4 outline-none rounded-full" type="text" name="fname" placeholder="First Name*">
+            <input class="p-4 outline-none rounded-full" type="text" name="lname" placeholder="Last Name*">
+            <input class="p-4 l outline-none rounded-full" type="number" name="number" placeholder="Phone Number*">
+            <input class="p-4  outline-none rounded-full" type="email" name="email" placeholder="Email*">
           </div>
           <!-- Textarea -->
           <textarea class="col-span-2 text-custom-gray  outline-none rounded-3xl resize-none row-span-6 p-4"
             name="message ">Write your message here</textarea>
           <!-- Send Mail Button -->
-          <div class="btn bg-backg-primary col-span-2 text-lg rounded-full">
+          <div class=" btn bg-backg-primary col-span-2 text-lg rounded-full">
             <a class=" text-xl font-bold rounded-full">
               Send Mail</a>
             <i class="fa-solid fa-arrow-right p-1 rounded-full bg-black text-white -rotate-45"></i>
