news section done

--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
             to life. Whether it’s a fresh concept or expanding on existing
             ideas, we’re ready to collaborate and craft solutions tailored to your needs. Connect with us to explore
             possibilities
-            and take the first step toward creating something exceptional.</p>
+            and take the first step towres creating something exceptional.</p>
         </div>
 
         <div class=" grid grid-cols-1 gap-7 w-[90%] md:w-[70%] mx-auto mt-24">
@@ -481,7 +481,6 @@
             <li><a href="#">Contact Us</a></li>
           </ul>
         </div>
-
         <div class="flex justify-center items-center mt-16">
           <div class="bg-backg-primary btn text-xl rounded-full ">
             <a class=" font-bold rounded-full">
