footer section done

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
       </div>
     </section>
 
-    <!--Work Process Section  -->
+    <!--Work Process section  -->
     <section class="mt-24">
       <div>
         <div class="flex flex-col justify-center items-center space-y-5">
@@ -417,7 +417,7 @@
       </div>
     </section>
 
-    <!--  Contact section -->
+    <!-- Contact section -->
     <section class="mt-24">
       <div class="connectbg py-20  ">
         <div class="flex flex-col justify-center items-center space-y-5">
