font size changes

--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
             <input class="p-4 outline-none rounded-full" type="email" name="email" placeholder="Email*">
           </div>
           <!-- Textarea -->
-          <textarea class="col-span-2 text-custom-gray  outline-none rounded-3xl resize-none row-span-6 p-4"
+          <textarea class="col-span-2 text-custom-gray  outline-none rounded-3xl resize-none row-span-6 p-4 w-full"
             name="message ">Write your message here</textarea>
           <!-- Send Mail Button -->
           <div class=" btn bg-backg-primary col-span-2 text-lg rounded-full">
@@ -453,6 +453,7 @@
           </div>
         </div>
     </section>
+
   </main>
 
   <!-- Footer Section -->
