fixed the contact section problems

--- a/index.html
+++ b/index.html
@@ -443,13 +443,15 @@
             <input class="p-4 outline-none rounded-full" type="email" name="email" placeholder="Email*">
           </div>
           <!-- Textarea -->
-          <textarea class="col-span-2 text-custom-gray  outline-none rounded-3xl resize-none row-span-6 p-4 w-full"
-            name="message ">Write your message here</textarea>
-          <!-- Send Mail Button -->
-          <div class=" btn bg-backg-primary col-span-2 text-lg rounded-full">
-            <a class=" text-xl font-bold rounded-full">
-              Send Mail</a>
-            <i class="fa-solid fa-arrow-right p-1 rounded-full bg-black text-white -rotate-45"></i>
+          <div class="space-y-5">
+            <textarea rows="4" class="text-custom-gray  outline-none rounded-3xl p-4 w-full resize-none"
+              name="message ">Write your message here</textarea>
+            <!-- Send Mail Button -->
+            <div class=" btn bg-backg-primary col-span-2 text-lg rounded-full w-full sm:w-auto">
+              <a class=" text-xl font-bold rounded-full">
+                Send Mail</a>
+              <i class="fa-solid fa-arrow-right p-1 rounded-full bg-black text-white -rotate-45"></i>
+            </div>
           </div>
         </div>
     </section>
