added unique section

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     <section class="mt-24">
       <div>
         <div class="flex flex-col justify-center items-center space-y-5">
-          <div class="btn text-lg bg-[#FFFFFF] rounded-full">
+          <div class="btn text-lg bg-[#ABEF5F33] rounded-full">
             <a class=" text-xl font-bold ">
               <i class="fa-solid fa-arrow-right p-1 rounded-full"></i>
               How we works</a>
@@ -299,6 +299,66 @@
 
           <img class="p-5 w-full  h-full col-span-5 md:col-span-3 md:flex lg:hidden border-4 rounded-xl"
             src="assets/img3.png" alt="">
+        </div>
+      </div>
+    </section>
+
+    <!-- Services Section -->
+    <section class="">
+      <div class="bg-[#FFFFFF] py-24 container mx-auto">
+        <div class="flex flex-col justify-center items-center space-y-5">
+          <div class="btn bg-[#ABEF5F33] text-lg rounded-full">
+            <a class=" text-xl font-bold ">
+              <i class="fa-solid fa-arrow-right p-1 rounded-full"></i>
+              Services</a>
+          </div>
+          <h3 class="text-3xl lg:text-5xl font-extrabold text-center">Our Services at Rinterio</h3>
+          <p class="w-8/12 text-center text-custom-gray  text-sm">Rinterio offers tailored interior design solutions,
+            from space planning and furniture design to color coordination and
+            full project management. Our expert team transforms your vision into stylish, functional spaces with
+            attention to every
+            detail.
+          </p>
+        </div>
+
+        <!-- cards -->
+        <div class=" flex flex-col md:flex-row mt-20 gap-8">
+          <!-- card-1 -->
+          <div class="bg-[#FFFFFF] h-auto p-10 w-full flex justify-center items-center  rounded-lg border-2 space-x-6">
+            <div>
+              <img class="w-56" src="assets/commercial.png" alt="">
+            </div>
+            <div class="space-y-3">
+              <h3 class="text-2xl font-extrabold">Lighting Designs</h3>
+              <p class="text-sm">Lighting design strategically uses fixtures to enhance aesthetics and functionality,
+                balancing brightness and color to
+                transform spaces and create desired effects.</p>
+            </div>
+          </div>
+          <!-- card-2 -->
+          <div class="bg-[#FFFFFF] h-auto p-10 w-full flex justify-center items-center space-x-6 rounded-lg border-2">
+            <div>
+              <img class="w-56" src="assets/residential.png" alt="">
+            </div>
+            <div class="space-y-3">
+              <h3 class="text-2xl font-extrabold">Interior Designs</h3>
+              <p class="text-sm">Interior Design optimizes indoor spaces for both beauty and function by choosing
+                colors, furniture, and layouts that
+                suit the client's style and needs.</p>
+            </div>
+          </div>
+          <!-- card-3 -->
+          <div class="bg-[#FFFFFF] h-auto p-10 w-full flex justify-center items-center space-x-6 rounded-lg border-2">
+            <div>
+              <img class="w-56" src="assets/residential.png" alt="">
+            </div>
+            <div class="space-y-3">
+              <h3 class="text-2xl font-extrabold">Outdoor Designs</h3>
+              <p class="text-sm">Outdoor Design enhances exterior spaces with thoughtful landscaping, furniture, and
+                lighting to create attractive and
+                functional outdoor areas.</p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
